# SPLIT_VIS_Bar

./: CMakeLists.txt  README  notes  notes~
SplitTool/: .config.swp  .splitToolkitmono.cpp.swp  config  config~  results  splitToolkit.cpp  splitToolkitdirect.cpp  splitToolkitmono.cpp  tmpfile
Vis/: log
libs/color/: main
libs/kmlocal-1.7.2/: Makefile
libs/quanVisLib/: .svBendBar.cpp.swo  .svBendBar.cpp.swp  .svDirectBar.cpp.swp  .svGlyph.cpp.swo  .svGlyph.cpp.swp  .svGlyph.h.swo  .svGlyph.h.swp  .svSplitVectorsBar.cpp.swo  .svSplitVectorsBar.cpp.swp  .svSplitVectorsBar.h.swo  .svSplitVectorsBar.h.swp  .svSummaryGlyph.cpp.swp  .svVectorField.cpp.swp  svGlyph.cpp  svVectorField.cpp
preprocessing/generateVTK/: .genVTKfromOrg.cpp.swp  Makefile  run
preprocessing/generatecontour/: .CMakeLists.txt.swp  .svContour.cpp.swp  CMakeCache.txt  CMakeList.txt  CMakeLists.txt  CMakeLists.txt.copy  Makefile  Makefile.1  Makefile.MAC  Makefile.cmake  cmake_install.cmake  install_manifest.txt  run
