cmake_minimum_required(VERSION 2.6)
project(Contour)
set(VTK_DIR "/home/hnz8/Library/VTK-build")
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
add_definitions(-D_VTK)
add_executable(Contour main.cpp svContour.cpp)
target_link_libraries(Contour ${VTK_LIBRARIES})
install(TARGETS Contour DESTINATION /home/hnz8/Documents/SPLIT_VIS2/bin)
